--- a/Client/Pages/ProfilePage.razor
+++ b/Client/Pages/ProfilePage.razor
@@ -281,9 +281,9 @@
                         {
                             if (editBtnClicked)
                             {
-
                                 foreach (TagsToShow tag in GetCurrentPageTags())
                                 {
+
                                     if (!editBtnClicked)
                                     {
                                         var fontWeight = (chosenTag == tag) ? "font-weight: 600;" : "";
@@ -301,20 +301,45 @@
                                 style="background-color:@tag.tagColor; @fontWeight">
                                                 @tag.tagTitle
 
-                                                <button class="options"><img style="height:1rem;" src="../css/images/option menu.svg" /></button>
-
+                                                <div class="options-container">
+                                                    <button class="options"><img style="height:1rem;" src="../css/images/option menu.svg" /></button>
+                                                </div>
 
                                             </button>
-
                                         </div>
                                     }
                                 }
-                                @if (OptionsBtnClicked)
+                               @* @if (OptionsBtnClicked)
                                 {
                                     <div class="outerOptions">
-                                        <OptionsMenuComponent editBtnClicked="openEditOrAddTagOverlay" deleteBtnClicked="callDeleteWarning" closeOverlay="()=>openDeleteTagWarning(true)"></OptionsMenuComponent>
+                                         <OptionsMenuComponent editBtnClicked="openEditOrAddTagOverlay" deleteBtnClicked="callDeleteWarning" closeOverlay="()=>openDeleteTagWarning(true)"></OptionsMenuComponent>
+
+                                        <div class="outerOptions">
+                                            <button class="optionButton editButton" @onclick="(() => iseditBtnClicked = !iseditBtnClicked)">
+                                                <img src="../css/images/edit_pencil.svg" class="icon" />
+                                                עריכה
+                                            </button>
+                                            <div class="lineBetween"> </div>
+                                            <button class="optionButton deleteButton" @onclick="(() => isdeleteBtnClicked = !isdeleteBtnClicked)">
+                                                <img src="../css/images/trash.svg" class="icon" />
+                                                מחיקה
+                                            </button>
+                                        </div>
                                     </div>
+                                }*@
+
+                                @if (iseditBtnClicked)
+                                {
+                                   openEditOrAddTagOverlay();
+                                    iseditBtnClicked = !iseditBtnClicked;
                                 }
+
+                                @if (isdeleteBtnClicked)
+                                {
+                                    callDeleteWarning();
+                                    isdeleteBtnClicked = !isdeleteBtnClicked;
+                                }
+
                             }
                             else
                             {
@@ -331,6 +356,24 @@
 
                         }
                     </div>
+                    @if (OptionsBtnClicked)
+                    {
+                        <div class="megaTagsOuterOptions">
+                            @* <OptionsMenuComponent editBtnClicked="openEditOrAddTagOverlay" deleteBtnClicked="callDeleteWarning" closeOverlay="()=>openDeleteTagWarning(true)"></OptionsMenuComponent>*@
+
+                            <div class="tagsOuterOptions">
+                                <button class="optionButton editButton" @onclick="(() => iseditBtnClicked = !iseditBtnClicked)">
+                                    <img src="../css/images/edit_pencil.svg" class="icon" />
+                                    עריכה
+                                </button>
+                                <div class="lineBetween"> </div>
+                                <button class="optionButton deleteButton" @onclick="(() => isdeleteBtnClicked = !isdeleteBtnClicked)">
+                                    <img src="../css/images/trash.svg" class="icon" />
+                                    מחיקה
+                                </button>
+                            </div>
+                        </div>
+                    }
                     <div class="outerBtnAndDots">
                         <button class="galleryArrow @disBtnStyle" @onclick="PreviousPage"><img src="../css/images/arrow-back.svg" /></button>
                         <div class="pageDots">
@@ -342,7 +385,7 @@
                         <button class="galleryArrow @disNextBtnStyle" @onclick="NextPage"><img src="../css/images/arrow-next.svg" /></button>
 
                     </div>
-
+                   
                 </div>
             </div>
         </div>
@@ -393,7 +436,7 @@
 
 @if (editTag)
 {
-    
+
     OptionsBtnClicked = false;
     <div>
         <div class="megaOuterLay">
@@ -404,15 +447,15 @@
                         @if (isEdit)
                         {
                             ogTagColor = chosenTag.tagColor;
-                            
-                            
+
+
                             if (isTagColor)
                             {
-                                
-                                    convertTagColors(chosenTag.tagColor);
-                                    Console.WriteLine("אני בפונקציה הראשונה");
-                                
-                                
+
+                                convertTagColors(chosenTag.tagColor);
+                                Console.WriteLine("אני בפונקציה הראשונה");
+
+
                             }
 
                             <div class="outerTitleAndIcon">
@@ -841,7 +884,7 @@
     public void openEditOrAddTagOverlay()
     {
         editTag = !editTag;
-        if(!isEdit)
+        if (!isEdit)
         {
             OgColor = chosenTag.tagColor;
         }
@@ -1112,11 +1155,11 @@
         {
             editedTag = currentUser.userTags.IndexOf(chosenTag);
             currentUser.userTags[editedTag].tagColor = OgColor;
-           
+
         }
 
         isEdit = false;
-        
+
 
         //if (tagToEdit.id == 0)
         //{
@@ -1125,6 +1168,18 @@
         //}
 
 
+    }
+
+
+    bool deleteBtnClicked;
+
+   
+    public bool iseditBtnClicked;
+    public bool isdeleteBtnClicked;
+
+    void closeDeleteOverLay()
+    {
+        openDeleteTagWarning(true);
     }
 
 }
