--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -134,7 +134,15 @@ else
                     </tr>
                 </tbody>
             </table>
-            <button class="primery-button" @onclick="getSubCatTotalsForStory">מצב החודש כרגע</button>
+            @if(tagsSpendingsList.Count == 0 && subCatsTotalsStory.Count == 0)
+            {
+                <button class="primery-button" @onclick="getSubCatTotalsForStory">מצב החודש כרגע</button>
+            }
+            else
+            {
+                <button class="primery-button" style="opacity:0.6">מצב החודש כרגע</button>
+            }
+            
 
             @if (storyPopUpWindow)
             {
@@ -194,6 +202,20 @@ else
                                     </div>
                                 </div>
                             }
+                            else if (storyNav == 1 && subCatsTotalsStory.Count == 0)
+                            {
+                                <div class="outerSecondStory" @onclick="NextStory">
+
+                                    <h3 class="storyTitle">לא נמצאו הוצאות או הכנסות החודש</h3>
+                                    <div class="noTagsDiv">
+                                    </div>
+                                    <div class="imgWrapper">
+
+                                        <img class="storyImg" src="../css/images/calendar2.svg" />
+                                    </div>
+                                </div>
+                            }
+
                             else if (storyNav == 2 && tagsSpendingsList.Count > 0)
                             {
                                 <div class="outerSecondStory" @onclick="NextStory">
